@@ -613,7 +613,7 @@ respectively.</p>
   &lt/javadoc&gt;</pre>
   
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
