@@ -147,6 +147,13 @@ inclusion/exclusion of files works, and how to write patterns.</p>
       "html", and "text"</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">scanincludeddirectories</td>
+    <td valign="top">If any directories are matched by the
+      includes/excludes patterns, try to transform all files in these
+      directories.  Default is <code>true</code></td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>classpath</h4>
